Fixed Process Title not properly wrapped when viewed in mobile (5719).

--- a/css/learningTargets/processes.less
+++ b/css/learningTargets/processes.less
@@ -1,8 +1,23 @@
 .lt-content-processes {
-	
 	a {
 	   outline: 0;
 	}
+
+	.fa {
+		font-size      : 16px;
+		padding-left   : 10px;
+		min-width      : 31px;
+		vertical-align : middle;
+	}
+
+	.process-name {
+		float          : none;
+		vertical-align : middle;
+		width          : 90%;
+		display        : inline-block;
+
+	}
+
 	.empty-task {
 		border-top : none;
 		font-size : 14px;
